<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUpActivity">

    <ImageView
        android:id="@+id/twotrianglesview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/twotrianlges"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore= "ContentDescription" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/signUp"
        android:textColor="#8E24AA"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/twotrianglesview" />

    <EditText
        android:id="@+id/signUpusername"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:drawableLeft="@drawable/name_icon"
        android:ems="10"
        android:hint="@string/login_usernaem"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTextView"
        android:drawableStart="@drawable/name_icon" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/email_icon"
        android:ems="10"
        android:hint="@string/sign_up_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        android:drawableStart="@drawable/email_icon" />

    <EditText
        android:id="@+id/signUppassword"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:drawableLeft="@drawable/password_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmail"
        android:drawableStart="@drawable/password_icon" />

    <Button
        android:id="@+id/signBtn"
        android:layout_width="151dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUppassword" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:drawableLeft="@drawable/phonenumber_icon"
        android:hint="@string/contact_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpusername" />
</androidx.constraintlayout.widget.ConstraintLayout>