<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quizHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/quiz_catagory_s"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#2848E8"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageButton
        android:id="@+id/artAndCraftButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/randomButton"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizHeading"
        app:srcCompat="@drawable/bird"
        tools:ignore="contentDescription" />

    <ImageButton
        android:id="@+id/sportsButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="75dp"
        android:layout_height="67dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/running"
        tools:ignore="contentDescription" />

    <ImageButton
        android:id="@+id/randomButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="#FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizHeading"
        app:srcCompat="@drawable/shuffle"
        tools:ignore="contentDescription" />

    <ImageButton
        android:id="@+id/scienceButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="64dp"
        android:layout_height="68dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@android:color/white"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toEndOf="@+id/sportsButton"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/atom"
        tools:ignore="contentDescription" />

    <View
        android:id="@+id/decorateView"
        android:layout_width="412dp"
        android:layout_height="305dp"
        android:background="@drawable/homepage_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainUsername"
        android:layout_width="243dp"
        android:layout_height="139dp"
        android:layout_marginBottom="132dp"
        android:gravity="center"
        android:hint="@string/login_usernaem"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/decorateView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mainSettingButton"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home"
        tools:ignore="contentDescription" />

    <ImageButton
        android:id="@+id/mainSettingButton"
        android:layout_width="54dp"
        android:layout_height="41dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/technicalsupport"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/artAndCraft"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artAndCraftButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/random"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/randomButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/Sports"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sportsButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/science"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/scienceButton" />

    <View
        android:id="@+id/imageView4"
        android:layout_width="313dp"
        android:layout_height="131dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/whitecard_scoreard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainUsername" />

    <TextView
        android:id="@+id/coinEarnTextView"
        android:layout_width="262dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/coins_earned"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:drawableLeftCompat="@drawable/coins_" />

    <TextView
        android:id="@+id/coinEarned"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/coinEarnTextView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>